@@ -928,7 +928,21 @@ function host_edit() {
 		}
 	}
 
-	window.onload = changeHostForm();
+	function addLoadEvent(func) {
+		var oldonload = window.onload;
+		if (typeof window.onload != 'function') {
+			window.onload = func;
+		} else {
+			window.onload = function() {
+				if (oldonload) {
+					oldonload();
+				}
+				func();
+			}
+		}
+	}
+
+	addLoadEvent(changeHostForm);
 
 	-->
 	</script>
