@@ -182,7 +182,21 @@ function settings() {
 		}
 	}
 
-	window.onload = graphSettings();
+	function addLoadEvent(func) {
+		var oldonload = window.onload;
+		if (typeof window.onload != 'function') {
+			window.onload = func;
+		} else {
+			window.onload = function() {
+				if (oldonload) {
+					oldonload();
+				}
+				func();
+			}
+		}
+	}
+
+	addLoadEvent(graphSettings);
 
 	-->
 	</script>
